Fixed the collapsible icon error. Here's a summary of the changes: - Error: Upon page reload, the panel titles were missing the "collapsed" class and were showing the wrong symbol at the end. - HTML: Added a new class to each title called initial - CSS: Added styling equivalent to the "collapsed" state for the initial - JS: Added .removeClass('initial') for two points in the bootstrap JS file

--- a/style.css
+++ b/style.css
@@ -94,19 +94,25 @@ p.last {
   margin-top: 0;
 }
 
-.panel-title.collapsed:after {
-  content: "\02795"; /* Unicode character for "plus" sign (+) */
+.panel-title:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
   font-size: 20px;
-  color: white;
   float: right;
   margin-top: 7px;
   margin-right: 10px;
 }
 
-.panel-title:after {
-  content: "\2796"; /* Unicode character for "minus" sign (-) */
+.panel-title.collapsed:after {
+  content: "\02795"; /* Unicode character for "plus" sign (+) */
   font-size: 20px;
-  color: white;
+  float: right;
+  margin-top: 7px;
+  margin-right: 10px;
+}
+
+.panel-title.initial:after {
+  content: "\02795"; /* Unicode character for "plus" sign (+) */
+  font-size: 20px;
   float: right;
   margin-top: 7px;
   margin-right: 10px;
